--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,36 @@
+{{! submit a to do item. }}
+
 <form method="POST">
 		<label>Post a to do item:
-			<input name="title" placeholder="To Do Item">
+			<input name="title" placeholder="To Do Item" autofocus>
 		</label>
 		<button type="submit">submit</button>
 </form>
 
-<form method="POST">
-		<label>Search for a to do item:
-			<input name="title" placeholder="Search">
-		</label>
-		<button type="submit">submit</button>
-</form>
+{{#each items}}
+  <!-- Small modal that deletes a to do item-->
+  <form method="POST" action="/delete">
+    <input type="hidden" value="{{title}}" name="title" />
+    <button type="submit" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete">
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    </button>
+  </form>
+{{/each}}
+
+<div id="to-do-items">
+  <ul>
+      {{#each items}}
+      <li>{{title}}</li>
+      {{/each}}
+  </ul>
+</div>
+
+
+{{! form method for a user to be able to search for a to do item. }}
+
+{{!--<form method="POST">--}}
+{{!--		<label>Search for a to do item:--}}
+{{!--			<input name="title" placeholder="Search">--}}
+{{!--		</label>--}}
+{{!--		<button type="submit">submit</button>--}}
+{{!--</form>--}}
