--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,9 @@
     text-align:center;
 }
 .content {
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
     width:100%;
     max-height:500px;
     min-height:501px;
