--- a/app/views/game/add_game.handlebars
+++ b/app/views/game/add_game.handlebars
@@ -11,7 +11,7 @@
     <label>Winner
         <select name="winner">
             {{#each teams}}
-            <option value="{{_id}}">{{teamName}}</option>
+            <option value="{{_id}}">{{Name}}</option>
             {{/each}}
         </select>
         <label>
@@ -23,7 +23,7 @@
     <label>Loser
         <select name="loser">
             {{#each teams}}
-            <option value="{{_id}}">{{teamName}}</option>
+            <option value="{{_id}}">{{Name}}</option>
             {{/each}}
         </select>
     </label>
