--- a/app/views/stat/index.handlebars
+++ b/app/views/stat/index.handlebars
@@ -12,7 +12,7 @@
     <tbody>
         {{#each coed}}
         <tr>
-            <td>{{teamName}}</td>
+            <td>{{Name}}</td>
             <td>{{wins}}</td>
             <td>{{losses}}</td>
             <form class=addPlayer action="/statdetails">
@@ -39,7 +39,7 @@
     <tbody>
         {{#each guys}}
         <tr>
-            <td>{{teamName}}</td>
+            <td>{{Name}}</td>
             <td>{{wins}}</td>
             <td>{{losses}}</td>
             <form class=addPlayer action="/stat/details">
@@ -66,7 +66,7 @@
     <tbody>
         {{#each girls}}
         <tr>
-            <td>{{teamName}}</td>
+            <td>{{Name}}</td>
             <td>{{wins}}</td>
             <td>{{losses}}</td>
             <form class=addPlayer action="/statdetails">
