--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -29,12 +29,27 @@ html
             a(href="#")
               ="The Situation Room"
       div#game
+        div#mineStatus.status
+          div.column
+            h3="Trumps"
+            h4="4/10"
+          div.column
+            h3="Dolla Bills"
+            h4="$69"
+          div.column
+            h3="Tacos"
+            h4="0 Bells"
+          div.column
+            h3="Ore"
+            h4="0 Tons"
+          div.column.lastColumn
+            h3="Trumpets"
+            h4="0 Trumps"
         div#theMines.area
           h2="The Mines"
           div.modulesContainer
             div#hatchery.module
               h3="Trump Hatchery"
-              p="Number of Trumps:"
             div#amMineInc.module
               h3="AmMine Inc."
             div#trumpcoTacoFarm.module
