--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -12,11 +12,7 @@ main {
   background-color: #2f2f2f;
 }
 
-#navbar a {
-  color: #4acd2f;
-}
-
-#navbar a:hover {
+#navbar li:hover {
   background-color: #1f1f1f;
 }
 
@@ -109,14 +105,15 @@ main {
   display: inline-flex;
 }
 
-#navbar a {
+#navbar li {
+  cursor: pointer;
+
   align-items: flex-start;
 
   padding: 1rem 1rem;
 
   font-size: 1.4rem;
   font-weight: bold;
-  text-decoration: none;
   text-align: center;
 }
 
@@ -186,7 +183,7 @@ main {
   #navbar {
     padding: 0 0 0rem 0;
   }
-  #navbar a {
+  #navbar li {
     font-size: 10px;
     padding: 0.4rem 0.3rem;
   }
