--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title="Trumpts - The Game"
+    title="Trumps - The Game"
     link(rel="stylesheet" href="/styles.css")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     script(src="/dist/socket.io.js")
