Fixed bug with selecting the appropriate nav elements Bugfix included writing a function to lowercase only the first letter of an element, as using to lowercase on everything broke on the situationRoom

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -52,7 +52,7 @@ html
             div#hatchery.module
               h3="Trump Hatchery"
             div#amMineInc.module
-              h3="AmMine Inc."
+              h3="Great America Mining"
             div#trumpcoTacoFarm.module
               h3="TrumpCo TaCo Farm"
             div#trumpetManufactury.module
