--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -68,3 +68,8 @@ html
         div#city.area.hidden
         div#whitehouse.area.hidden
         div#situationRoom.area.hidden
+      div#deleteSave.module
+        h3="Reset Game"
+        div.buttonHolder
+          button(type="button")#deleteButton.button
+            ="Deletes your save!"
