Updated README, index
Index had labels corrected, created my own README

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -53,11 +53,11 @@ html
               h3="Trump Hatchery"
               div.buttonHolder
                 button(type="button")#hatcheryButton.button
-                  ="Hatch a trump!"
+                  ="Recruit a Trump!"
                 button(type="button")#hatcheryMoneyButton.button
-                  ="Make some money! (1 per trump)"
+                  ="Raise Campaign Funds! (1 per trump)"
                 button(type="button")#trumpSlotButton.button
-                  ="Buy max-trumps increase! ($100)"
+                  ="Upgrade Trump Barracks! ($100)"
             div#amMineInc.module
               h3="Great America Mining"
             div#trumpcoTacoFarm.module
