Update: Delete and Update buttons added. Still working on a 'Delete All' option.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
 
 <head>
     <title>Final Project</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -27,7 +26,17 @@
             Enter # of Laps:<input type="text" placeholder="# of Lap" name="laps"></label>
             <br>
             <button type="submit">Enter Log</button>
-         </form>
+        </form>
+        <div>
+        <button type="submit" id="update"> Request Last Entry Alteration </button>
+        </div>
+        <div>
+        <button type= "submit" id="delete"> Delete first entry </button>
+        </div>
+        <div>
+        <button type="submit" id="delall">Delete Logbook</button>
+        </div>
+        <script src="main.js"></script>
     </p>
 </body>
 
