--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -55,11 +55,18 @@ html
                 button(type="button")#hatcheryButton.button
                   ="Recruit a Trump!"
                 button(type="button")#hatcheryMoneyButton.button
-                  ="Raise Campaign Funds! (1 per trump)"
+                  ="Raise Campaign Funds! (+$1)"
                 button(type="button")#trumpSlotButton.button
                   ="Upgrade Trump Barracks! ($100)"
             div#amMineInc.module
               h3="Great America Mining"
+              div.buttonHolder
+                button(type="button")#mineOreButton.button.hidden
+                  ="Mine an Ore! (10 Left)"
+                button(type="button")#expandMinesButton.button.hidden
+                  ="Expand the mines! ($500)"
+                button(type="button")#hireImmigrantsButton.button.hidden
+                  ="Hire illegal immigrants! ($2500)"
             div#trumpcoTacoFarm.module
               h3="TrumpCo TaCo Farm"
             div#trumpetManufactury.module
