--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -47,6 +47,13 @@ main {
   background-color: #222222;
   color: white;
   border: 2px solid #4acd2f;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+   -khtml-user-select: none; /* Konqueror */
+     -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none; /* Non-prefixed version, currently
+                                not supported by any browser */
 }
 
 .button:hover {
