Added immigrant functionality (/sec calls) Added a way to do things each second - isn't it fun! That completes GAM section, time to start on TrumpCo TaCo Farm

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -66,7 +66,7 @@ html
                 button(type="button")#expandMinesButton.button
                   ="Expand the mines! ($2500)"
                 button(type="button")#hireImmigrantsButton.button
-                  ="Hire illegal immigrants! ($5000)"
+                  ="Hire illegal immigrants! ($10000) (+$0/s)"
             div#trumpcoTacoFarm.module
               h3="TrumpCo TaCo Farm"
             div#trumpetManufactury.module
