--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -28,20 +28,20 @@ html
         //Note: The convention for status is the area name + Status
         div#mineStatus.status.active
           div.column#trumps
-            h3="Trumps"
-            h4="0/1"
+            h2="Trumps"
+            h3="0/1"
           div.column#dollaBills
-            h3="Dolla Bills"
-            h4="0"
+            h2="Dolla Bills"
+            h3="0"
           div.column#tacos
-            h3="Tacos"
-            h4="0"
+            h2="Tacos"
+            h3="0"
           div.column#ore
-            h3="Ore"
-            h4="0"
+            h2="Ore"
+            h3="0"
           div.column.lastColumn#trumpets
-            h3="Trumpets"
-            h4="0"
+            h2="Trumpets"
+            h3="0"
         div#villageStatus.status.hidden
         div#cityStatus.status.hidden
         div#whitehouseStatus.status.hidden
@@ -49,34 +49,44 @@ html
         div#mine.area.active
           h2="The Mines"
           div.modulesContainer
-            div#hatchery.module
-              h3="Trump Hatchery"
-              div#hatcheryButtonHolder.buttonHolder
-                button(type="button")#hatcheryButton.button
-                  ="Recruit a Trump!"
-                button(type="button")#hatcheryMoneyButton.button
-                  ="Raise Campaign Funds! (+$1)"
-                button(type="button")#trumpSlotButton.button
-                  ="Upgrade Trump Barracks! ($100)"
-            div#amMineInc.module
-              h3="Great America Mining"
-              div#amMineButtonHolder.buttonHolder.hidden
-                button(type="button")#mineOreButton.button
-                  ="Mine an Ore! (10 Left)"
-                button(type="button")#expandMinesButton.button
-                  ="Expand the mines! ($2500)"
-                button(type="button")#hireImmigrantsButton.button
-                  ="Hire illegal immigrants! ($10000) (+$0/s)"
-            div#trumpcoTacoFarm.module
-              h3="TrumpCo TaCo Farm"
-            div#trumpetManufactury.module
-              h3="Trumpet Manufactory"
+            div.moduleRow
+              div#hatchery.module
+                h3="Trump Hatchery"
+                div#hatcheryButtonHolder.buttonHolder
+                  button(type="button")#hatcheryButton.button
+                    ="Recruit a Trump!"
+                  button(type="button")#hatcheryMoneyButton.button
+                    ="Raise Campaign Funds! (+$1)"
+                  button(type="button")#trumpSlotButton.button
+                    ="Upgrade Trump Barracks! ($100)"
+              div#amMineInc.module
+                h3="Great America Mining"
+                div#amMineButtonHolder.buttonHolder.hidden
+                  button(type="button")#mineOreButton.button
+                    ="Mine an Ore! (10 Left)"
+                  button(type="button")#expandMinesButton.button
+                    ="Expand the mines! ($2500)"
+                  button(type="button")#hireImmigrantsButton.button
+                    ="Hire illegal immigrants! ($10000) (+$0/s)"
+            div.moduleRow
+              div#trumpcoTacoFarm.module
+                h3="TrumpCo TaCo Farm"
+                div#tacoFarmButtonHolder.buttonHolder.hidden
+                  button(type="button")#farmTacoButton.button
+                    ="Farm a taco!"
+                  button(type="button")#Button.button
+                    =""
+                  button(type="button")#Button.button
+                    =""
+              div#trumpetManufactury.module
+                h3="Trumpet Manufactory"
+            div.moduleRow
+              div#deleteSave.module
+                h3="Reset Game"
+                div.buttonHolder
+                  button(type="button")#deleteButton.button
+                    ="Deletes your save!"
         div#village.area.hidden
         div#city.area.hidden
         div#whitehouse.area.hidden
         div#situationRoom.area.hidden
-      div#deleteSave.module
-        h3="Reset Game"
-        div.buttonHolder
-          button(type="button")#deleteButton.button
-            ="Deletes your save!"
