--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -29,24 +29,24 @@ main {
 }
 
 .status {
-  border-bottom: 2px solid #8b8b8b;
+  border-bottom: 4px solid #8b8b8b;
 }
 
 .column {
-  border: 2px solid #8b8b8b;
+  border: 3px solid #8b8b8b;
   border-top: none;
   border-bottom: none;
   border-right: none;
 }
 
 .lastColumn {
-  border-right: 2px solid #8b8b8b;
+  border-right: 3px solid #8b8b8b;
 }
 
 .button {
   background-color: #222222;
   color: white;
-  border: 2px solid #4acd2f;
+  border: 3px solid #4acd2f;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Chrome/Safari/Opera */
    -khtml-user-select: none; /* Konqueror */
@@ -66,13 +66,7 @@ main {
   margin: 0;
   border: 0;
 }
-html, body {
-  height: 100vh;
-  width: 100vw;
-}
 body {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
 }
@@ -80,7 +74,7 @@ main {
   width: 94%;
   margin: 0 3%;
   font-family: Verdana;
-  font-size: 14px;
+  font-size: 20px;
 }
 #headingStuff {
   text-align: center;
@@ -102,9 +96,9 @@ main {
   font-size: 24px;
   font-weight: bold;
 }
-/*.hidden {
+.hidden {
   display:none !important;
-}*/
+}
 .status {
   display: flex;
   flex-direction: row;
@@ -129,6 +123,7 @@ main {
 }
 .area {
   margin: 0 1rem;
+  padding: 0.5rem;
 }
 .modulesContainer {
   /*display: flex;
@@ -153,6 +148,6 @@ main {
   cursor: pointer;
   font-size: 20px;
   padding: 0.4rem;
-  margin: 0.2rem 0;
+  margin: 0.4rem 0;
   text-align: center;
 }
